--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "type": "module",
   "dependencies": {
+    "axios": "^1.11.0",
     "csv-parser": "^3.2.0",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "openai": "^5.10.2"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/express": "^5.0.3",
     "@types/node": "^24.1.0",
     "@types/node-fetch": "^2.6.12",
