--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
-  "postinstall": "cd client && npm install",
+  "postinstall": "cd client && npm install && npm run build:client && npm run copy:client && npm run copy:csv && npm run copy:prebakedimages",
   "scripts": {
     "build:server": "tsc -p server/tsconfig.json",
     "build:client": "cd client && npm run build",
     "copy:csv": "cpx server/postcode_constituency_files/*.csv dist/postcode_constituency_files/",
     "copy:prebakedimages": "cpx output/*.png dist/output/",
     "copy:client": "rm -rf dist/client && cp -r client/dist dist/client",
-    "full-build": "npm run build:server && npm run build:client && npm run copy:client && npm run copy:csv && npm run copy:prebakedimages",
+    "full-build": "npm run build:server",
     "dev": "nodemon"
   }
 }
