--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.850.0",
     "@msgpack/msgpack": "^3.1.2",
     "axios": "^1.11.0",
     "csv-parser": "^3.2.0",
@@ -18,7 +19,8 @@
     "cpx": "^1.5.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "wrangler": "^4.26.0"
   },
   "scripts": {
     "build:server": "tsc -p server/tsconfig.json",
