Updating FAQ section to clarify the purpose of the site and the implications of the Online Safety Act.

--- a/package.json
+++ b/package.json
@@ -26,9 +26,8 @@
     "build:server": "tsc -p server/tsconfig.json",
     "build:client": "cd client && npm run build",
     "copy:csv": "cpx \"server/postcode_constituency_files/*.msgpack\" \"dist/postcode_constituency_files/\"",
-    "copy:prebakedimages": "cpx output/*.png dist/output/",
     "copy:client": "rm -rf dist/client && cp -r client/dist dist/client",
-    "full-build": "npm run build:server && npm run build:client && npm run copy:client && npm run copy:csv && npm run copy:prebakedimages",
+    "full-build": "npm run build:server && npm run build:client && npm run copy:client && npm run copy:csv",
     "dev": "nodemon"
   }
 }
