--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "node-fetch": "^3.3.2",
-    "openai": "^5.10.2"
+    "openai": "^5.10.2",
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
